@@ -1,3 +1,12 @@
+2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* configure: Regen.
+	* tcl.m4 (SC_ENABLE_SYMBOLS): Update
+	macro to support passing --enable-symbols=mem
+	on the configure command line.
+	* itcl/configure: Regen.
+	* itk/configure: Regen.
+
 2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* itcl/configure: Regen.
